# napari-live-recording

./: .gitignore  .pypirc  LICENSE  README.md  cv_blur.py  cv_canny.py  deploy.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  viewer_test.py
.github/workflows/: deploy.yaml  plugin_preview.yml  publish.yaml  test_and_deploy.yaml  unit_test.yaml
docs/: README.md  camera-interface.md  changelog.md  conf.py  documentation.md  index.rst  interface.md  processing_engine.md  template_filter.py  user_guide.md
docs/camera/: camera_interface.rst  index.rst  list_of_cameras.rst  new_camera.rst
docs/changelog/: changelog.rst
docs/napari_live_recording/: modules.rst  napari_live_recording.Cameras.rst  napari_live_recording.Functions.rst
docs/postprocessing/: index.rst  post_processing.rst
napari_live_recording/: __init__.py  _dock_widget.py
napari_live_recording/Cameras/: CameraError.py  CameraOpenCV.py  CameraXimea.py  ICamera.py  TestCamera.py  __init__.py
napari_live_recording/Functions/: Functions.py  __init__.py
napari_live_recording/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
napari_live_recording/common/: __init__.py  common.py
napari_live_recording/control/: __init__.py  control.py
napari_live_recording/devices/: __init__.py  interface.py  opencv.py  ximea.py
napari_live_recording/widgets/: __init__.py  widgets.py
napari_live_recording_rework/: __init__.py
napari_live_recording_rework/common/: __init__.py
napari_live_recording_rework/control/: control.py
napari_live_recording_rework/devices/: __init__.py  interface.py  opencv.py  ximea.py
napari_live_recording_rework/widgets/: __init__.py  widgets.py
paper/: paper.md
src/napari_live_recording/: __init__.py  _version.py  napari.yaml
src/napari_live_recording/ARCH_REWORK/common/: __init__.py
src/napari_live_recording/ARCH_REWORK/control/: __init__.py
src/napari_live_recording/ARCH_REWORK/control/devices/: interface.py  opencv.py
src/napari_live_recording/ARCH_REWORK/devices/: interface.py  opencv.py
src/napari_live_recording/ARCH_REWORK/ui/: __init__.py  widgets.py
src/napari_live_recording/_test/: conftest.py  test_recording.py  test_settings.py  test_startup.py  test_ui.py
src/napari_live_recording/common/: __init__.py  common.py
src/napari_live_recording/control/: __init__.py  control.py  frame_buffer.py  test.py
src/napari_live_recording/control/devices/: PythonMicroscope.py  __init__.py  interface.py  micro_manager.py  opencv.py  pymicroscope.py  pymmcore-plus.py  simcamera.py
src/napari_live_recording/devices/: __init__.py  interface.py  opencv.py  ximea.py
src/napari_live_recording/gui/: _widgets.py  viewing.py
src/napari_live_recording/processing_engine/: __init__.py  customwidgets.py  frame_buffer.py  import numpy as np.py  load_filter.py  pims_testing.py  processing_gui.py  processing_gui_v1.1.py  processing_guiv1.2.py  processing_guiv1.3.py  test.py  threading_test.py
src/napari_live_recording/processing_engine/image_filters/: __init__.py  gauss.py  other_gauss.py
src/napari_live_recording/processing_engine_/: __init__.py  pims_testing.py  processing_gui.py
src/napari_live_recording/processing_engine_/image_filters/: __init__.py  canny.py  gauss.py  other_gauss.py  pixelated.py
src/napari_live_recording/ui/: __init__.py  widgets.py
src/napari_live_recording/widgets/: __init__.py  widgets.py
