[metadata]
name = napari-live-recording
version = 0.2.0
author = Jacopo Abramo
author_email = jacopo.abramo@gmail.com
url = https://github.com/jethro33/napari-live-recording
license = MIT
description = A napari plugin for live video recording with a generic camera device.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT
