[metadata]
name = napari-live-recording
version = 0.2.1
author = Jacopo Abramo
author_email = jacopo.abramo@gmail.com
url = https://github.com/jethro33/napari-live-recording
license = MIT
description = A napari plugin for live video recording with a generic camera device.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/jacopoabramo/napari-live-recording/issues
    Documentation = https://github.com/jacopoabramo/napari-live-recording#README.md
    Source Code = https://github.com/jacopoabramo/napari-live-recording
    User Support = https://github.com/jacopoabramo/napari-live-recording/issues

[options]
packages = find:
include_package_data = True
install_requires =
    superqt
    numpy
    opencv-python
    opencv-contrib-python
    dask_image
    napari
    qtpy

python_requires = >=3.6
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-live-recording = napari_live_recording:napari.yaml

[options.package_data]
napari-live-recording = napari.yaml