[metadata]
name = napari-live-recording
version = 0.3.8
author = "Jacopo Abramo, Pia Pritzke, Felix Wanitschke"
author_email = jacopo.abramo@gmail.com
url = https://github.com/jethro33/napari-live-recording
license = MIT
description = A napari plugin for live video recording with a generic camera device.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Bug Tracker = https://github.com/jacopoabramo/napari-live-recording/issues
    Documentation = https://github.com/jacopoabramo/napari-live-recording#README.md
    Source Code = https://github.com/jacopoabramo/napari-live-recording
    User Support = https://github.com/jacopoabramo/napari-live-recording/issues

[options]
packages = find:
include_package_data = True
install_requires =
    superqt
    numpy
    opencv-python
    tifffile
    napari[all]
    qtpy
    microscope >= 0.7.0
    pims
    pyqtgraph
    pymmcore-plus >= 0.6.7
    pymmcore-widgets

python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-live-recording = napari_live_recording:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
napari-live-recording = napari.yaml